--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flipclock": "^0.8.2",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.16",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemailer": "^4.6.4"
   }
 }
