--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-minify-html": "^0.12.0",
     "flipclock": "^0.8.2",
+    "helmet": "^3.12.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.0.16",
     "morgan": "~1.9.0",
+    "nexmo": "^2.2.0",
     "nodemailer": "^4.6.4"
   }
 }
